using ahref with button

--- a/Challenges/kids_street_clothes/assets/styles/index.css
+++ b/Challenges/kids_street_clothes/assets/styles/index.css
@@ -185,6 +185,7 @@ body {
   width: 300px;
   padding: 0.3em 0;
   font-size: 20px;
+  cursor: pointer;
 }
 
 .menuwithimages {
@@ -201,12 +202,12 @@ body {
 
 .menuwithimages_items_each_title {
   border-top: 0.1em solid #000;
-  padding: .5em 0;
+  padding: 0.5em 0;
 }
 
 .menuwithimages_items_each_title h2 {
-    font-size: 18px;
-    font-weight: 600;
+  font-size: 18px;
+  font-weight: 600;
 }
 
 .menuwithimages_items_each_imgHandler {
